[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Medieval Theme/Door.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Door.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI/E-Button.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "DoorClose"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 5, 4, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightOccluder2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -14 ), Vector2( 0, -12 ), Vector2( 0, -10 ), Vector2( 0, -8 ), Vector2( 0, -6 ), Vector2( 0, -4 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "DoorOpen"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightOccluder2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, -4 ), Vector2( 0, -6 ), Vector2( 0, -8 ), Vector2( 0, -10 ), Vector2( 0, -12 ), Vector2( 0, -14 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.01675, 8.02149 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 5, 0, 5.0625, 15.9375, 11.0625, 15.9375, 11.0625, -0.0625 )

[sub_resource type="CircleShape2D" id=5]
radius = 12.7289

[node name="Door" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
hframes = 8

[node name="Key Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 8, -8 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/DoorClose = SubResource( 1 )
anims/DoorOpen = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8.02715, 7.98376 )
shape = SubResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="Activation Zone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Activation Zone"]
position = Vector2( 7.95325, 8.032 )
shape = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Activation Zone" to="." method="_on_Activation_Zone_body_entered"]
[connection signal="body_exited" from="Activation Zone" to="." method="_on_Activation_Zone_body_exited"]
